--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@ body::before {
   overflow: hidden;
   border: 1px solid #ffffff22;
 
-  /* animation */
   opacity: 0;
   animation: fadeInUp 0.8s ease forwards;
 }
@@ -72,7 +71,6 @@ body::before {
   text-transform: uppercase;
   margin-bottom: 12px;
 
-  /* animation */
   opacity: 0;
   animation: fadeInUp 0.8s ease forwards;
   animation-delay: 0.15s;
@@ -85,7 +83,6 @@ body::before {
   color: #bbbbbb;
   margin-bottom: 48px;
 
-  /* animation */
   opacity: 0;
   animation: fadeInUp 0.8s ease forwards;
   animation-delay: 0.3s;
@@ -111,12 +108,10 @@ body::before {
   gap: 18px;
   overflow: hidden;
 
-  /* animation */
   opacity: 0;
   transform: translateX(-30px);
   animation: slideIn 0.6s ease forwards;
 
-  /* hover smoothing only */
   transition: background 0.4s ease, border 0.4s ease;
 }
 
@@ -190,7 +185,6 @@ body::before {
   letter-spacing: 2px;
   color: #666;
 
-  /* animation */
   opacity: 0;
   animation: fadeInUp 0.8s ease forwards;
   animation-delay: 1.1s;
@@ -215,11 +209,24 @@ body::before {
   }
 }
 
-/* ---------- MOBILE ---------- */
+/* ---------- MOBILE TEXT ---------- */
 @media (max-width: 520px) {
   .name {
     font-size: 26px;
     letter-spacing: 6px;
+  }
+}
+
+/* ---------- MOBILE FIX (IMPORTANT) ---------- */
+@media (max-height: 700px) {
+  body {
+    align-items: flex-start;
+    overflow-y: auto;
+  }
+
+  .wrapper {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
   }
 }
 </style>
@@ -228,7 +235,6 @@ body::before {
 <body>
 <div class="wrapper">
 
-  <!-- PROFILE -->
   <div class="avatar">
     <img src="assets/pfp.png" alt="profile">
   </div>
@@ -236,7 +242,6 @@ body::before {
   <div class="name">PINOCCHIO</div>
   <div class="bio">CSE Student • Competitive Programmer • Web Enthusiast</div>
 
-  <!-- LINKS -->
   <div class="links">
     <a class="link" href="https://github.com/pinooocchio" target="_blank">
       <span class="index">Ⅰ</span>
