--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
 
 /* ---------- BASE ---------- */
 body {
-  min-height: 100vh;
   font-family: "Segoe UI", system-ui, sans-serif;
   background: radial-gradient(circle at center, #0b0b0b 0%, #000 70%);
   color: #e5e5e5;
+
+  /* desktop layout */
   display: flex;
   justify-content: center;
   align-items: center;
 
-  /* ✅ FIX */
+  min-height: 100vh;
   overflow-x: hidden;
 }
 
 /* ---------- SUBTLE STAR DUST ---------- */
 body::before {
   content: "";
-  position: fixed; /* important */
+  position: fixed;
   inset: 0;
   background-image: radial-gradient(#ffffff14 1px, transparent 1px);
   background-size: 80px 80px;
@@ -45,7 +46,7 @@ body::before {
   text-align: center;
   position: relative;
   z-index: 1;
-  padding: 3rem 0; /* ensures space top & bottom */
+  padding: 3rem 0;
 }
 
 /* ---------- PROFILE ---------- */
@@ -56,7 +57,6 @@ body::before {
   border-radius: 50%;
   overflow: hidden;
   border: 1px solid #ffffff22;
-
   opacity: 0;
   animation: fadeInUp 0.8s ease forwards;
 }
@@ -74,7 +74,6 @@ body::before {
   letter-spacing: 8px;
   text-transform: uppercase;
   margin-bottom: 12px;
-
   opacity: 0;
   animation: fadeInUp 0.8s ease forwards;
   animation-delay: 0.15s;
@@ -86,7 +85,6 @@ body::before {
   letter-spacing: 1.5px;
   color: #bbbbbb;
   margin-bottom: 48px;
-
   opacity: 0;
   animation: fadeInUp 0.8s ease forwards;
   animation-delay: 0.3s;
@@ -115,11 +113,10 @@ body::before {
   opacity: 0;
   transform: translateX(-30px);
   animation: slideIn 0.6s ease forwards;
-
   transition: background 0.4s ease, border 0.4s ease;
 }
 
-/* staggered reveal */
+/* stagger */
 .link:nth-child(1){ animation-delay: 0.45s; }
 .link:nth-child(2){ animation-delay: 0.55s; }
 .link:nth-child(3){ animation-delay: 0.65s; }
@@ -127,22 +124,18 @@ body::before {
 .link:nth-child(5){ animation-delay: 0.85s; }
 .link:nth-child(6){ animation-delay: 0.95s; }
 
-/* roman number */
 .link span.index {
   width: 30px;
   font-size: 13px;
   color: #777;
-  letter-spacing: 2px;
 }
 
-/* label */
 .link span.label {
   flex: 1;
   font-size: 15px;
   letter-spacing: 1px;
 }
 
-/* arrow */
 .link span.arrow {
   opacity: 0;
   transform: translateX(-6px);
@@ -150,7 +143,6 @@ body::before {
   color: #999;
 }
 
-/* light sweep */
 .link::before {
   content: "";
   position: absolute;
@@ -165,16 +157,12 @@ body::before {
   transition: left 0.8s ease;
 }
 
-/* hover */
 .link:hover {
   background: rgba(255,255,255,0.04);
   border-color: #ffffff30;
 }
 
-.link:hover::before {
-  left: 120%;
-}
-
+.link:hover::before { left: 120%; }
 .link:hover .arrow {
   opacity: 1;
   transform: translateX(0);
@@ -186,7 +174,6 @@ body::before {
   font-size: 11px;
   letter-spacing: 2px;
   color: #666;
-
   opacity: 0;
   animation: fadeInUp 0.8s ease forwards;
   animation-delay: 1.1s;
@@ -195,14 +182,21 @@ body::before {
 /* ---------- ANIMATIONS ---------- */
 @keyframes fadeInUp {
   from { opacity: 0; transform: translateY(20px); }
-  to   { opacity: 1; transform: translateY(0); }
+  to { opacity: 1; transform: translateY(0); }
 }
-
 @keyframes slideIn {
   to { opacity: 1; transform: translateX(0); }
 }
 
-/* ---------- MOBILE TEXT ---------- */
+/* ---------- MOBILE FIX (ANDROID CHROME) ---------- */
+@media (max-width: 768px) {
+  body {
+    display: block;   /* 🔥 critical */
+    min-height: auto; /* 🔥 critical */
+  }
+}
+
+/* ---------- SMALL MOBILE ---------- */
 @media (max-width: 520px) {
   .name {
     font-size: 26px;
@@ -223,36 +217,12 @@ body::before {
   <div class="bio">CSE Student • Competitive Programmer • Web Enthusiast</div>
 
   <div class="links">
-    <a class="link" href="https://github.com/pinooocchio" target="_blank">
-      <span class="index">Ⅰ</span>
-      <span class="label">GitHub</span>
-      <span class="arrow">↗</span>
-    </a>
-    <a class="link" href="https://www.linkedin.com/in/owarashad-iqbal-709b473a1" target="_blank">
-      <span class="index">Ⅱ</span>
-      <span class="label">LinkedIn</span>
-      <span class="arrow">↗</span>
-    </a>
-    <a class="link" href="https://discord.com/users/pinocchio.sad" target="_blank">
-      <span class="index">Ⅲ</span>
-      <span class="label">Discord</span>
-      <span class="arrow">↗</span>
-    </a>
-    <a class="link" href="mailto:zadid2011@gmail.com">
-      <span class="index">Ⅳ</span>
-      <span class="label">Email</span>
-      <span class="arrow">↗</span>
-    </a>
-    <a class="link" href="https://monkeytype.com/profile/pinocchio12" target="_blank">
-      <span class="index">Ⅴ</span>
-      <span class="label">Monkeytype</span>
-      <span class="arrow">↗</span>
-    </a>
-    <a class="link" href="https://codeforces.com/profile/Pinocchioo" target="_blank">
-      <span class="index">Ⅵ</span>
-      <span class="label">Codeforces</span>
-      <span class="arrow">↗</span>
-    </a>
+    <a class="link" href="https://github.com/pinooocchio" target="_blank"><span class="index">Ⅰ</span><span class="label">GitHub</span><span class="arrow">↗</span></a>
+    <a class="link" href="https://www.linkedin.com/in/owarashad-iqbal-709b473a1" target="_blank"><span class="index">Ⅱ</span><span class="label">LinkedIn</span><span class="arrow">↗</span></a>
+    <a class="link" href="https://discord.com/users/pinocchio.sad" target="_blank"><span class="index">Ⅲ</span><span class="label">Discord</span><span class="arrow">↗</span></a>
+    <a class="link" href="mailto:zadid2011@gmail.com"><span class="index">Ⅳ</span><span class="label">Email</span><span class="arrow">↗</span></a>
+    <a class="link" href="https://monkeytype.com/profile/pinocchio12" target="_blank"><span class="index">Ⅴ</span><span class="label">Monkeytype</span><span class="arrow">↗</span></a>
+    <a class="link" href="https://codeforces.com/profile/Pinocchioo" target="_blank"><span class="index">Ⅵ</span><span class="label">Codeforces</span><span class="arrow">↗</span></a>
   </div>
 
   <div class="footer">2026 — between curiosity and discipline</div>
